# my-projects

./: README.md
Celeb-Identify/: app.py  pyproject.toml  replit.md
Securezip/: index.html  package-lock.json  package.json  vite.config.ts
Securezip/src/: App.tsx  types.ts
Securezip/src/components/: FilterBar.tsx  ResourceCard.tsx
Securezip/src/data/: resources.ts
my-youtube-dual-subtitle/: app.py
